spade-tests/src/snapshots/spade_tests__auto_traits__generic_type_is_not_data_if_generic_is_not_data.snap
---
source: spade-tests/src/auto_traits.rs
---
fn needs_data<T: Data>(x: T) {}

fn test1(x: clock) {
    needs_data(x)
}


error: Argument type mismatch. Expected core::marker::Data got clock
  ┌─ testinput:4:16
  │
1 │ fn needs_data<T: Data>(x: T) {}
  │                  ---- Required because of the trait bound specified here
  ·
4 │     needs_data(x)
  │                ^ clock does not implement core::marker::Data
