spade-tests/src/snapshots/spade_tests__auto_traits__registers_require_data.snap
---
source: spade-tests/src/auto_traits.rs
---
entity test(clk: clock) {
    reg(clk) r = port().1;
}


error: Trait bound not satisfied. inv _ does not implement core::marker::Data
  ┌─ testinput:2:14
  │
2 │     reg(clk) r = port().1;
  │     ---      ^   -------- The type of this expression is not Data which means it cannot be stored in a register.
  │     │        │    
  │     │        inv _ does not implement core::marker::Data
  │     Required because of the trait bound specified here
  │
  = help: An expression not being Data typically means it contains at least one `inv` type
  = help: You can learn more about `Data` here: https://docs.spade-lang.org/wires.html
