spade-tests/src/snapshots/spade_tests__auto_traits__type_with_inv_is_not_data.snap
---
source: spade-tests/src/auto_traits.rs
---
struct A {
    x: bool,
    y: inv bool,
}

fn needs_data<T: Data>(x: T) {}

fn test(x: A) {
    needs_data(x)
}


error: Argument type mismatch. Expected core::marker::Data + core::marker::Copy got A
  ┌─ testinput:9:16
  │
6 │ fn needs_data<T: Data>(x: T) {}
  │                  ---- Required because of the trait bound specified here
  ·
9 │     needs_data(x)
  │                ^ A does not implement core::marker::Data and core::marker::Copy
